--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="paperlist">
                 <a href="https://drive.google.com/drive/folders/1Lse1M5qjCbOktgr1CUsUf7OG6_MqWF1F">1st Year</a>
                 <a href="https://drive.google.com/drive/folders/1UkdWDVc6D-454zZdxAjx0i83qj8YsvcY">2nd sem</a>
-                <a href="">3rd sem</a>
+                <a href="https://drive.google.com/drive/folders/16f4oi_MCOT49ETB4QowGD35FInd7z40X">3rd sem</a>
                 <a href="">4th sem</a>
                 <a href="">5th sem</a>
                 <a href="">6th sem</a>
